Add dependencies only to modules