@@ -248,18 +248,6 @@
                     </plugin>
                 </plugins>
             </build>
-            <dependencies>
-                <dependency>
-                    <groupId>javax.annotation</groupId>
-                    <artifactId>javax.annotation-api</artifactId>
-                    <version>1.3.2</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.sun.activation</groupId>
-                    <artifactId>javax.activation</artifactId>
-                    <version>1.2.0</version>
-                </dependency>
-            </dependencies>
         </profile>
         <profile>
             <id>jdk10</id>
@@ -274,10 +262,6 @@
                         <version>3.8.0</version>
                         <configuration>
                             <release>10</release>
-                            <compilerArgs>
-                                <arg>--add-modules=java.xml.ws.annotation</arg>
-                                <arg>--add-modules=java.activation</arg>
-                            </compilerArgs>
                         </configuration>
                     </plugin>
                 </plugins>
